Fix title alignment

--- a/style-en.css
+++ b/style-en.css
@@ -1,3 +1,6 @@
+.steps .step .title {
+  margin: 0 0 0.5em 2.5em;
+}
 
 .steps .step .iconContainer {
   margin-left: 0;
